--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     background-color: #F6F4F3;
 }
 
+.image1 {
+    text-align: center;
+}
+
 .anchor {
     text-align: center;
     word-spacing: 120px;
