--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ aside {
 
 .general {
     height: 900px;
-    background-image: url(Hobby.jpg);
+    background-image: url(img/Hobby.jpg);
     background-size: cover;
 }
 
@@ -65,7 +65,7 @@ aside {
 
 .travelling {
     height: 950px;
-    background-image: url(Travelling.jpg);
+    background-image: url(img/Travelling.jpg);
     background-size: cover;
     width: 80%;
     float: right;
@@ -86,7 +86,7 @@ img {
 
 .rock {
     height: 950px;
-    background-image: url(Rock.jpg);
+    background-image: url(img/Rock.jpg);
     background-size: cover;
 }
 
@@ -99,7 +99,7 @@ img {
 
 .reading {
     height: 930px;
-    background-image: url(Reading.jpg);
+    background-image: url(img/Reading.jpg);
     background-size: 100% 100%;
 }
 
