--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 
 header {
     height: 50px;
-    background-size: 100%;
     opacity: 0.6;
     font-size: 30px;
     border-radius: 5px;
@@ -26,23 +25,24 @@ header {
     top: 0px;
 }
 
+header a {
+    color: black;
+}
+
+div p {
+    font-size: 22px;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 h1 {
-    padding-top: 90px;
+    padding-top: 70px;
     padding-bottom: 60px;
     font-size: 4em;
     font-family: 'Oswald', sans-serif;
     color: #8d9db6;
     text-shadow: 4px 4px black;
-}
-
-header a {
-    color: black;
-}
-
-aside {
-    width: 20%;
-    background-color: #b7d7e8;
-    float: left;
 }
 
 .general {
@@ -54,8 +54,6 @@ aside {
 .general p {
     background-color: #e6c18d;
     color: #4f3222;
-    font-size: 22px;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .general img {
@@ -64,7 +62,7 @@ aside {
 }
 
 .travelling {
-    height: 950px;
+    height: 900px;
     background-image: url(img/Travelling.jpg);
     background-size: cover;
     width: 80%;
@@ -74,18 +72,17 @@ aside {
 .travelling p {
     background-color: #DFE3EE;
     color: #3B5998;
-    font-size: 22px;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
-img {
+figure img {
     margin-top: 50px;
     height: 400px;
     border: #3B5998 solid 3px;
+    border-radius: 10px;
 }
 
 .rock {
-    height: 950px;
+    height: 900px;
     background-image: url(img/Rock.jpg);
     background-size: cover;
 }
@@ -93,41 +90,42 @@ img {
 .rock p {
     background-color: #e9dbd5;
     color: #964f8e;
-    font-size: 22px;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .reading {
-    height: 930px;
+    height: 900px;
     background-image: url(img/Reading.jpg);
-    background-size: 100% 100%;
+    background-size: cover;
 }
 
 .reading p {
     background-color: #667292;
     color: #e0e2e4;
-    font-size: 22px;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .clear {
     clear: both;
 }
 
-table,
-td,
-th {
+aside {
+    width: 20%;
+    background-color: #b7d7e8;
+    float: left;
+}
+
+table, td, th {
     border-spacing: 3px;
     border: 1px solid #7a3b2e;
     font-family: 'Roboto Condensed', sans-serif;
     border-radius: 8px;
-    font-size: 20px;
+    font-size: 14px;
 }
 
 caption {
-    background: #e9dbd5;
+    background-color: #e9dbd5;
     color: #964f8e;
     border: 2px solid #7a3b2e;
+    border-radius: 10px;
 }
 
 tr:nth-child(2n+1) {
@@ -170,6 +168,30 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 600px) {
+    * {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+    }
+    html {
+        scroll-behavior: smooth;
+    }
+    body {
+        text-align: justify;
+    }
+.general, .travelling, .rock, .reading{
+    height: 600px;
+}
+div p {
+        padding-left: 15px;
+        padding-right: 15px;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 12px;
+    }
+    body img {
+margin-left: 5px;
+        height: 140px;
+    }
     header {
         height: 40px;
         background-size: 100%;
@@ -183,14 +205,6 @@ footer a:hover {
         top: 0px;
         text-align: center;
     }
-    body {
-        text-align: justify;
-        height: 100%;
-    }
-    body p{
-        padding-left: 6px;
-        padding-right: 6px;
-    }
     h1 {
         text-align: center;
         padding-top: 30px;
@@ -201,109 +215,73 @@ footer a:hover {
         text-shadow: 4px 4px black;
     }
     .general {
-      background-color: lightblue;
-      background-image: url(img/Hobby.jpg);
-      background-size: cover;
+        background-color: lightblue;
+        background-image: url(img/Hobby.jpg);
     }
     .general p {
         background-color: #e6c18d;
         color: #4f3222;
-        font-family: 'Roboto Condensed', sans-serif;
-        font-size: 12px;
     }
-        .general img {
-            margin-top: 50px;
-            height: 250px;
-            font-size: 12px;
-text-align: center;
-        }
-        aside {
-            width: 100%;
-            background-color: #b7d7e8;
-        }
-        table,
-        td,
-        th {
-            border-spacing: 3px;
-            border: 1px solid #7a3b2e;
-            font-family: 'Roboto Condensed', sans-serif;
-            border-radius: 8px;
-            font-size: 14px;
-        }
-        caption {
-            background-color: #e9dbd5;
-            color: #964f8e;
-            border: 2px solid #7a3b2e;
-        }
-        
-        tr:nth-child(2n+1) {
-            background: #3B5998;
-            color: #DFE3EE;
-        }
-        
-        tr:nth-child(2n) {
-            background: #DFE3EE;
-            color: #3B5998;
-  }
-  .travelling {
-    height: 600px;
-    background-image: url(img/Travelling.jpg);
-    background-size: cover;
-    width: 100%;
-}
-
-.travelling p {
-    background-color: #DFE3EE;
-    color: #3B5998;
-    font-size: 12px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-img {
-    margin-top: 50px;
-    height: 140px;
-    border: #3B5998 solid 1px;
-    text-align: center;
-}
-.rock {
-    height: 650px;
-    background-image: url(img/Rock.jpg);
-    background-size: cover;
-}
-
-.rock p {
-    background-color: #e9dbd5;
-    color: #964f8e;
-    font-size: 12px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-.reading {
-    height: 930px;
-    background-image: url(img/Reading.jpg);
-    background-size: 100% 100%;
-}
-
-.reading p {
-    background-color: #667292;
-    color: #e0e2e4;
-    font-size: 12px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-footer {
-    background-image: url(img/Hobby.jpg);
-    padding: 15px;
-    background-size: 100%;
-    color: #e0e2e4;
-    font-size: 18px;
-    font-family: 'Oswald', sans-serif;
-    text-align: center;
-}
-
-footer a {
-    background-image: linear-gradient(#e0e2e4, #667292, #e0e2e4);
-    color: #000000;
-    border-radius: 3px;
-    padding: 6px;
-}
+    aside {
+        width: 100%;
+        background-color: #b7d7e8;
+    }
+    table, td, th {
+        text-align: center;
+        border-spacing: 3px;
+        border: 1px solid #7a3b2e;
+        font-family: 'Roboto Condensed', sans-serif;
+        border-radius: 8px;
+        font-size: 14px;
+    }
+    caption {
+        background-color: #e9dbd5;
+        color: #964f8e;
+        border: 2px solid #7a3b2e;
+    }
+    tr:nth-child(2n+1) {
+        background: #3B5998;
+        color: #DFE3EE;
+    }
+    tr:nth-child(2n) {
+        background: #DFE3EE;
+        color: #3B5998;
+    }
+    .travelling {
+        background-image: url(img/Travelling.jpg);
+        width: 100%;
+    }
+    .travelling p {
+        background-color: #DFE3EE;
+        color: #3B5998;
+    }
+    .rock {
+        background-image: url(img/Rock.jpg);
+    }
+    .rock p {
+        background-color: #e9dbd5;
+        color: #964f8e;
+    }
+    .reading {
+        background-image: url(img/Reading.jpg);
+    }
+    .reading p {
+        background-color: #667292;
+        color: #e0e2e4;
+    }
+    footer {
+        background-image: url(img/Hobby.jpg);
+        padding: 15px;
+        background-size: 100%;
+        color: #e0e2e4;
+        font-size: 18px;
+        font-family: 'Oswald', sans-serif;
+        text-align: center;
+    }
+    footer a {
+        background-image: linear-gradient(#e0e2e4, #667292, #e0e2e4);
+        color: #000000;
+        border-radius: 3px;
+        padding: 6px;
+    }
 }
